crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__wolfir_silverheart_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 136,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Soulbond (You may pair ~ with another unpaired creature when either enters. They remain paired for as long as you control both of them.)"
      },
      "node": {
        "Unsupported": {
          "unsupported": {
            "name": "unknown",
            "fragment": "Soulbond",
            "description": "Soulbond"
          },
          "min_x_value": 0
        }
      }
    },
    {
      "id": 1,
      "source": {
        "id": {
          "item": 1,
          "ordinal": 0
        },
        "span": {
          "first_line": 1,
          "last_line": 1,
          "start_byte": 137,
          "end_byte": 218,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "As long as ~ is paired with another creature, each of those creatures gets +4/+4."
      },
      "node": {
        "Static": {
          "definition": {
            "mode": "Continuous",
            "affected": {
              "type": "SourceOrPaired"
            },
            "modifications": [
              {
                "type": "AddPower",
                "value": 4
              },
              {
                "type": "AddToughness",
                "value": 4
              }
            ],
            "condition": {
              "type": "SourceIsPaired"
            },
            "affected_zone": null,
            "effect_zone": null,
            "active_zones": [],
            "characteristic_defining": false,
            "description": "As long as ~ is paired with another creature, each of those creatures gets +4/+4."
          },
          "source_text": "As long as ~ is paired with another creature, each of those creatures gets +4/+4.",
          "body_ir": null
        }
      }
    }
  ],
  "source_text": "Soulbond (You may pair this creature with another unpaired creature when either enters. They remain paired for as long as you control both of them.)\nAs long as this creature is paired with another creature, each of those creatures gets +4/+4.",
  "card_name": "Wolfir Silverheart"
}
