crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__wolfir_silverheart_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "Unimplemented",
        "name": "unknown",
        "description": "Soulbond"
      },
      "cost": null,
      "sub_ability": null,
      "duration": null,
      "description": "Soulbond",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [
    {
      "mode": "Continuous",
      "affected": {
        "type": "SourceOrPaired"
      },
      "modifications": [
        {
          "type": "AddPower",
          "value": 4
        },
        {
          "type": "AddToughness",
          "value": 4
        }
      ],
      "condition": {
        "type": "SourceIsPaired"
      },
      "affected_zone": null,
      "effect_zone": null,
      "active_zones": [],
      "characteristic_defining": false,
      "description": "As long as ~ is paired with another creature, each of those creatures gets +4/+4."
    }
  ],
  "replacements": [],
  "extractedKeywords": []
}
