crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__young_pyromancer_ir.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&ir"
---
{
  "items": [
    {
      "id": 0,
      "source": {
        "id": {
          "item": 0,
          "ordinal": 0
        },
        "span": {
          "first_line": 0,
          "last_line": 0,
          "start_byte": 0,
          "end_byte": 89,
          "precision": "Exact",
          "ordinal_within_span": 0
        },
        "fragment": "Whenever you cast an instant or sorcery spell, create a 1/1 red Elemental creature token."
      },
      "node": {
        "Trigger": {
          "Parsed": {
            "condition": "SpellCast",
            "partial_def": {
              "mode": "SpellCast",
              "execute": null,
              "valid_card": {
                "type": "Or",
                "filters": [
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Instant"
                    ],
                    "controller": null,
                    "properties": []
                  },
                  {
                    "type": "Typed",
                    "type_filters": [
                      "Sorcery"
                    ],
                    "controller": null,
                    "properties": []
                  }
                ]
              },
              "origin": null,
              "destination": null,
              "trigger_zones": [
                "Battlefield"
              ],
              "phase": null,
              "optional": false,
              "damage_kind": "Any",
              "secondary": false,
              "valid_target": {
                "type": "Controller"
              },
              "valid_source": null,
              "description": null,
              "constraint": null,
              "condition": null,
              "batched": false
            },
            "body": {
              "EffectChain": {
                "clauses": [
                  {
                    "id": 0,
                    "source": {
                      "id": {
                        "item": 0,
                        "ordinal": 1
                      },
                      "span": {
                        "first_line": 0,
                        "last_line": 0,
                        "start_byte": 0,
                        "end_byte": 41,
                        "precision": "ChainRelative",
                        "ordinal_within_span": 0
                      },
                      "fragment": "create a 1/1 red Elemental creature token"
                    },
                    "disposition": {
                      "Emit": {
                        "followup": null,
                        "intrinsic": null
                      }
                    },
                    "parsed": {
                      "effect": {
                        "type": "Token",
                        "name": "Elemental",
                        "power": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "toughness": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "types": [
                          "Creature",
                          "Elemental"
                        ],
                        "colors": [
                          "Red"
                        ],
                        "keywords": [],
                        "tapped": false,
                        "count": {
                          "type": "Fixed",
                          "value": 1
                        },
                        "owner": {
                          "type": "Controller"
                        },
                        "enters_attacking": false
                      },
                      "duration": null,
                      "sub_ability": null,
                      "distribute": null,
                      "multi_target": null,
                      "condition": null,
                      "optional": false,
                      "unless_pay": null
                    },
                    "boundary": null,
                    "condition": null,
                    "is_optional": false,
                    "opponent_may_scope": null,
                    "repeat_for": null,
                    "player_scope": null,
                    "starting_with": null,
                    "delayed_condition": null,
                    "prefix_delayed_condition": null,
                    "multi_target": null,
                    "where_x_expression": null,
                    "unless_pay": null
                  }
                ],
                "kind": "Spell",
                "continuation_kind": null,
                "player_scope_rewrite": "Apply",
                "chain_rounding": null,
                "actor": null,
                "in_trigger": true,
                "repeat_until": null
              }
            },
            "modifiers": {
              "optional": false,
              "unless_pay": null,
              "intervening_if": null,
              "trigger_subject": {
                "type": "Controller"
              },
              "first_time_limit": null,
              "constraint": null,
              "has_up_to": false,
              "effect_lower": "create a 1/1 red elemental creature token.",
              "relative_player_scope": null
            },
            "source_text": "Whenever you cast an instant or sorcery spell, create a 1/1 red Elemental creature token.",
            "die_results": []
          }
        }
      }
    }
  ],
  "source_text": "Whenever you cast an instant or sorcery spell, create a 1/1 red Elemental creature token.",
  "card_name": "Young Pyromancer"
}
